--- a/index1.css
+++ b/index1.css
@@ -5721,7 +5721,8 @@ header:not(.sub-downwards) #main-nav > li.menu-frame-on.act:hover > a,
 #main-nav > li > a span:before,
 #main-nav > li.act > a span:before,
 #main-nav.menu-material-underline-style > li > a:before {
- background: none;
+ background: transparent;
+ color: black;
 }
 #main-nav.menu-material-style > li:not(.act):hover > a:before {
   background-color: rgba(59,140,237,0.1);
