--- a/index1.css
+++ b/index1.css
@@ -6866,7 +6866,7 @@ div.mc4wp-form button[type="submit"],
 .static-line.benefits-style-one .wf-cell > div:after,
 .static-line.benefits-style-two .benefits-inner:after,
 hr.gf_rule {
-  background-color: rgba(136,136,136,0.15);
+  background-color: black;
 }
 .stripe-style-1 .dt-fancy-title.bg-on,
 .stripe-style-1 .line-decoration:after,
